gdk/x11/gdkprivate-x11.h
@@ -247,6 +247,12 @@ gboolean  _gdk_x11_device_xi2_get_scroll_delta    (GdkX11DeviceXI2    *device,
                                                    gdouble            *delta_ret);
 void     _gdk_device_xi2_reset_scroll_valuators   (GdkX11DeviceXI2    *device);
 
+gdouble  gdk_x11_device_xi2_get_last_axis_value (GdkX11DeviceXI2 *device,
+                                                 gint             n_axis);
+
+void     gdk_x11_device_xi2_store_axes          (GdkX11DeviceXI2 *device,
+                                                 gdouble         *axes,
+                                                 gint             n_axes);
 #endif
 
 void     _gdk_x11_event_translate_keyboard_string (GdkEventKey *event);
